# wind-resource-assessment-romaal

./: .gitignore  Collaboration.md  LICENSE  README.md  pyproject.toml
examples/: main.py
src/wra/: __init__.py  assessment.py  energy.py  interpolation.py  io.py  profiles.py  rose.py  weibull.py  wind.py
