[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wra"
version = "0.1.0"
description = "Wind resource assessment package using ERA5 reanalysis data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "romaal" }
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "xarray",
  "netCDF4"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pylint",
  "ipykernel"
]

[tool.hatch.build.targets.wheel]
packages = ["src/wra"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.main]
py-version = "3.10"
